@@ -85,3 +85,4 @@
 20231024 ./watchlist/clean.sh added.
 20231024 ./watchlist/hia-parse-http-git.sh added.
 20231024 ./watchlist/pubk.sh added.
+20231024 ./watchlist/c/l.sh added.
